force-app/main/default/objects/Rowing_Session__c/Rowing_Session__c.object-meta.xml
<CustomObject>
    <label>Rowing Session</label>
    <nameField>
        <label>Rowing Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rowing Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>