force-app/main/default/objects/Rowing_Session__c/fields/Boat__c.field-meta.xml
<CustomField>
    <fullName>Boat__c</fullName>
    <label>Boat</label>
    <referenceTo>Boat__c</referenceTo>
    <relationshipLabel>Rowing Sessions</relationshipLabel>
    <relationshipName>Rowing_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>