force-app/main/default/objects/Rowing_Session__c/fields/Booked_By__c.field-meta.xml
<CustomField>
    <fullName>Booked_By__c</fullName>
    <label>Booked By</label>
    <referenceTo>Rower__c</referenceTo>
    <relationshipLabel>Rowing Sessions</relationshipLabel>
    <relationshipName>Rowing_Sessions_Booked</relationshipName>
    <type>Lookup</type>
</CustomField>