force-app/main/default/objects/Rowing_Session__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <label>Session Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Morning</fullName><default>false</default><label>Morning</label></value>
            <value><fullName>Afternoon</fullName><default>false</default><label>Afternoon</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>